--- a/usescases/build.gradle
+++ b/usescases/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api project(':entities')
     api 'android.arch.lifecycle:extensions:1.1.1'
+
+    // RxJava2 Dependencies
+    api 'io.reactivex.rxjava2:rxjava:2.2.2'
+    api 'io.reactivex.rxjava2:rxandroid:2.1.0'
 }
 repositories {
     mavenCentral()
