--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    testImplementation 'android.arch.core:core-testing:1.1.1', {
+        exclude group: 'com.android.support', module: 'support-compat'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-core-utils'
+    }
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     api project(':usescases')
 }
