--- a/usescases/build.gradle
+++ b/usescases/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
 
 
 android {
     compileSdkVersion 28
-
-
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
@@ -37,6 +36,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api project(':entities')
     api 'android.arch.lifecycle:extensions:1.1.1'
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+
 
 }
 repositories {
