--- a/usescases/build.gradle
+++ b/usescases/build.gradle
@@ -32,11 +32,20 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+    testImplementation 'android.arch.core:core-testing:1.1.1', {
+        exclude group: 'com.android.support', module: 'support-compat'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-core-utils'
+    }
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     api project(':entities')
     api 'android.arch.lifecycle:extensions:1.1.1'
+
     kapt "android.arch.persistence.room:compiler:1.1.1"
+
+    api "io.reactivex.rxjava2:rxjava:2.2.7"
+    api "io.reactivex.rxjava2:rxandroid:2.1.1"
 
 
 }
