--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-core-utils'
     }
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    api project(':usescases')
+    api project(':domain')
 
     // RxJava2 Dependencies
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
