--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,24 @@
           package="com.waether.app">
 
     <application
+            android:name=".WeatherApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:name=".WeatherApp"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-    >
+            android:theme="@style/AppTheme">
+        <activity android:name=".feature.forecast.ForecastActivity">
+        </activity>
         <activity android:name=".feature.randomizer.RandomizerActivity">
+
+        </activity>
+        <activity android:name=".feature.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity android:name=".feature.home.HomeActivity">
-
         </activity>
     </application>
 
