--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     api "io.reactivex.rxjava2:rxjava:2.2.7"
     api "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
 
 
 }
